      being directly assigned to a keyboard key. This allows more fine graded
      processing of voices, which is i.e. required for certain instrument
      script features.
    - Fix: Release trigger voices were not spawned on sustain pedal up
      (CC #64) events.
    - Fix: Release trigger voices can now also distinguish correctly between
      note-off and sustain pedal up events.

  * packaging changes:
    - removed unnecessary dependency to libuuid
      (originated by libgig's usage of it)
    - Automake: set environment variable GCC_COLORS=auto to allow GCC to
      auto detect whether it (sh/c)ould output its messages in color.

  * Real-time instrument scripts:
    - Implemented scheduler for delayed MIDI events and for suspended scripts.
    - Built-in script function "wait()": implemented support for function's
      "duration-us" argument, thus scripts using this function are now
      correctly resumed after the requested amount of microseconds.
    - Built-in script function "play_note()": implemented support for
      function's "duration-us" argument, thus notes triggered with this
      argument are now correctly released after the requested amount of
      microseconds.
    - Fix: script events were not cleared when engine channel was reset,
      potentially causing undefined behavior.
    - Fixed crash which happened when trying to reference an undeclared
      variable.
    - Built-in script function "play_note()": Added support for passing
      special value -1 for "duration-us" argument, which will cause the
      triggered note to be released once the original note was released.
    - Instrument script classes now exported with the liblinuxsampler C++ API.
    - Added new API method ScriptVM::syntaxHighlighting() which provides
      a convenient syntax highlighting backend for external instrument
      script editor applications.
    - Added new C++ API class "ScriptVMFactory".